[gd_scene load_steps=8 format=3 uid="uid://drqn7af1f65gs"]

[ext_resource type="Script" path="res://GameContent/Scripts/Player/character_control.gd" id="1_2iggf"]
[ext_resource type="Script" path="res://GameContent/Scripts/Player/camera_control.gd" id="2_ub647"]
[ext_resource type="PackedScene" uid="uid://bryfjgn2r5k5n" path="res://GameContent/Scenes/UI/game_ui.tscn" id="3_qtnsh"]
[ext_resource type="Texture2D" uid="uid://bueul7w1uj0sb" path="res://GameContent/Sprites/Neuro_Idle_Temp.png" id="3_ujfd8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jvpmk"]
atlas = ExtResource("3_ujfd8")
region = Rect2(0, 0, 384, 384)

[sub_resource type="SpriteFrames" id="SpriteFrames_kx2in"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvpmk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uc05l"]
radius = 26.0
height = 196.0

[node name="Player" type="CharacterBody2D" groups=["Entity", "Player"]]
process_mode = 1
collision_layer = 3
collision_mask = 3
script = ExtResource("1_2iggf")
metadata/walk_speed = 300.0
metadata/jump_velocity = -400.0

[node name="Cameras" type="Node" parent="."]

[node name="MainCam" type="Camera2D" parent="Cameras"]
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("2_ub647")

[node name="GameUi" parent="Cameras/MainCam" instance=ExtResource("3_qtnsh")]
anchors_preset = 15
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(18, -39)
sprite_frames = SubResource("SpriteFrames_kx2in")
offset = Vector2(-17.94, -31.955)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_uc05l")

[node name="MainAnimation" type="AnimationPlayer" parent="."]

[node name="AnimationRoot" type="AnimationTree" parent="MainAnimation"]

[node name="MenuControl" type="Node" parent="."]
